[gd_scene load_steps=2 format=3 uid="uid://cxvxay8qkqx0"]

[ext_resource type="Script" path="res://ui/SettingsMenuStandalone.gd" id="1_settings"]

[node name="SettingsMenuStandalone" type="CanvasLayer"]
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.1, 0.2, 1)

[node name="UI" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0

[node name="Title" type="Label" parent="UI"]
layout_mode = 2
text = "SETTINGS"
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="SettingsContainer" type="VBoxContainer" parent="UI"]
layout_mode = 2
size_flags_vertical = 3

[node name="MasterVolume" type="HBoxContainer" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume:"
theme_override_font_sizes/font_size = 16

[node name="Slider" type="HSlider" parent="UI/SettingsContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="UI/SettingsContainer/MasterVolume"]
layout_mode = 2
text = "100%"
theme_override_font_sizes/font_size = 16

[node name="MusicVolume" type="HBoxContainer" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume:"
theme_override_font_sizes/font_size = 16

[node name="Slider" type="HSlider" parent="UI/SettingsContainer/MusicVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 0.7

[node name="ValueLabel" type="Label" parent="UI/SettingsContainer/MusicVolume"]
layout_mode = 2
text = "70%"
theme_override_font_sizes/font_size = 16

[node name="SFXVolume" type="HBoxContainer" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SettingsContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
text = "SFX Volume:"
theme_override_font_sizes/font_size = 16

[node name="Slider" type="HSlider" parent="UI/SettingsContainer/SFXVolume"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.01
value = 1.0

[node name="ValueLabel" type="Label" parent="UI/SettingsContainer/SFXVolume"]
layout_mode = 2
text = "100%"
theme_override_font_sizes/font_size = 16

[node name="HSeparator2" type="HSeparator" parent="UI/SettingsContainer"]
layout_mode = 2

[node name="TestSFX" type="Button" parent="UI/SettingsContainer"]
layout_mode = 2
text = "Test Sound Effect"
theme_override_font_sizes/font_size = 16

[node name="HSeparator3" type="HSeparator" parent="UI"]
layout_mode = 2

[node name="BackButton" type="Button" parent="UI"]
layout_mode = 2
text = "BACK TO MENU"
theme_override_font_sizes/font_size = 20